# drf_project

./: .gitignore  README.md  pyproject.toml
articles/: models.py  serializers.py  urls.py  views.py
drf_project/: settings.py  urls.py
users/: admin.py  serializers.py  urls.py  views.py
users/migrations/: 0002_remove_user_date_of_birth.py
